# OnvifPlayground

./: CMakeLists.txt  main.cpp
discovery/: generate.sh  wsdd.nsmap  wsddC.cpp  wsddClient.cpp  wsddH.h  wsddStub.h
onvif/: AdvancedSecurityServiceBinding.nsmap  generate.sh  onvif.h  soapAdvancedSecurityServiceBindingProxy.cpp  soapAdvancedSecurityServiceBindingProxy.h  soapDeviceBindingProxy.cpp  soapMediaBindingProxy.cpp  soapPullPointSubscriptionBindingProxy.cpp  soapRuleEngineBindingProxy.cpp  soapRuleEngineBindingProxy.h  soapStub.h
